Adapt user code and add swagger docs
